[gd_scene load_steps=13 format=3 uid="uid://bwwpepovp64f4"]

[ext_resource type="Script" path="res://scripts/ranking.gd" id="1_xb5gn"]
[ext_resource type="PackedScene" uid="uid://4rs8c0tprrq2" path="res://scenes/elements/grass_scene.tscn" id="3_vxjhe"]
[ext_resource type="Texture2D" uid="uid://c1p4du6k6vcoc" path="res://assets/images/score_leaderboard/sign_stick.svg" id="4_r48mm"]
[ext_resource type="FontFile" uid="uid://b0saslnjrd1oj" path="res://assets/fonts/Caveat-Regular.ttf" id="5_gggmu"]
[ext_resource type="Texture2D" uid="uid://cxl032dw44e1e" path="res://assets/images/score_leaderboard/sign_board.svg" id="5_rb7hn"]
[ext_resource type="FontFile" uid="uid://d4kabkagmfeq" path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" id="6_cs7y4"]
[ext_resource type="PackedScene" uid="uid://c6fr60rxsiw4d" path="res://scenes/ui/button_scene.tscn" id="9_chw64"]
[ext_resource type="PackedScene" uid="uid://xxtvscobei3h" path="res://scenes/elements/character_selection_scene.tscn" id="10_4ojsk"]
[ext_resource type="Texture2D" uid="uid://b7ye18qi15ivo" path="res://assets/images/game_over_screen/grass/3-grass.svg" id="11_c7v1q"]

[sub_resource type="Theme" id="Theme_vixhm"]
default_font = ExtResource("5_gggmu")
default_font_size = 190

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jra3h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnum6"]

[node name="RankingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(543, 848)
script = ExtResource("1_xb5gn")
metadata/_edit_use_anchors_ = true

[node name="GrassScene2" parent="." instance=ExtResource("3_vxjhe")]
layout_mode = 1
offset_left = -111.0
offset_top = 57.0
offset_right = -111.0
offset_bottom = 57.0

[node name="SignStick" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 680.0
offset_right = 644.0
offset_bottom = 1894.0
scale = Vector2(1.07018, 1.07018)
texture = ExtResource("4_r48mm")
metadata/_edit_lock_ = true

[node name="SignBoard" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -957.0
offset_right = -6.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rb7hn")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="SaveYourScore" type="Control" parent="."]
visible = false
z_index = 16
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 105.0
offset_top = -80.0
offset_right = 105.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.826565, 0.826565)

[node name="save your score" type="Label" parent="SaveYourScore"]
layout_mode = 2
offset_left = -12.0983
offset_top = 169.376
offset_right = 1067.9
offset_bottom = 740.376
rotation = -0.0925025
scale = Vector2(1.14113, 1.14113)
pivot_offset = Vector2(554.195, 278.131)
theme = SubResource("Theme_vixhm")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.98, 0.0196, 0.0196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.42, 0.42, 0.729412)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 100
text = "save your
SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SaveYourScore"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -100.0
offset_top = 650.0
offset_right = 318.0
offset_bottom = 1400.0
grow_horizontal = 2
scale = Vector2(0.632, 0.632)
pivot_offset = Vector2(532.35, 200.359)
alignment = 1

[node name="add your name" type="Label" parent="SaveYourScore/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_vixhm")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.67451, 0.411765, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_cs7y4")
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxEmpty_jra3h")
text = "add your name"
horizontal_alignment = 1

[node name="ChractersNode" type="HBoxContainer" parent="SaveYourScore/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 270
alignment = 1

[node name="CharacterSelectionScene1" parent="SaveYourScore/VBoxContainer/ChractersNode" instance=ExtResource("10_4ojsk")]
layout_mode = 2

[node name="CharacterSelectionScene2" parent="SaveYourScore/VBoxContainer/ChractersNode" instance=ExtResource("10_4ojsk")]
layout_mode = 2

[node name="CharacterSelectionScene3" parent="SaveYourScore/VBoxContainer/ChractersNode" instance=ExtResource("10_4ojsk")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SaveYourScore"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 151.403
offset_top = 240.0
offset_right = -75.5967
offset_bottom = 373.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45

[node name="CloseButton" parent="SaveYourScore/HBoxContainer" instance=ExtResource("9_chw64")]
layout_mode = 2
size_flags_horizontal = 3
text = "close"
button_type = 1

[node name="SaveButton" parent="SaveYourScore/HBoxContainer" instance=ExtResource("9_chw64")]
layout_mode = 2
size_flags_horizontal = 3
text = "save"

[node name="Ranking" type="Control" parent="."]
z_index = 16
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -210.0
offset_right = 30.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2

[node name="RankingLabel" type="Label" parent="Ranking"]
layout_mode = 2
offset_left = 241.0
offset_top = 271.0
offset_right = 767.0
offset_bottom = 511.0
rotation = -0.0925025
pivot_offset = Vector2(280.203, 111.162)
theme = SubResource("Theme_vixhm")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.98, 0.0196, 0.0196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.42, 0.42, 0.729412)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 100
text = "Ranking"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Ranking"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.0
offset_top = -429.0
offset_right = 423.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Ranking/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -20
alignment = 1

[node name="rankingListLabel" type="Label" parent="Ranking/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0100903, 0.0100903, 0.0100903, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.67451, 0.411765, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_cs7y4")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_qnum6")
text = "No scores yet!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Ranking"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -818.0
offset_right = 161.0
offset_bottom = -685.0
grow_horizontal = 2
grow_vertical = 0

[node name="CloseButton" parent="Ranking/HBoxContainer" instance=ExtResource("9_chw64")]
layout_mode = 2
size_flags_horizontal = 3
text = "close"
button_type = 1

[node name="grass3" type="TextureRect" parent="."]
z_index = 16
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -848.0
offset_top = -94.0
offset_right = 868.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_c7v1q")

[connection signal="pressed" from="SaveYourScore/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="SaveYourScore/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Ranking/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
